--- a/modules/docs/arrow-docs/docs/_posts/2017-02-08-podcast.md
+++ b/modules/docs/arrow-docs/docs/_posts/2017-02-08-podcast.md
@@ -6,7 +6,7 @@ event: Lamda World
 version: version 0.3.11
 date: 2017-03-11
 header-image: /img/blog-image-header.png
-category: [all, podcast]
+category: [all, media]
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipiscing
