--- a/modules/docs/arrow-docs/docs/_posts/2017-02-08-podcast.md
+++ b/modules/docs/arrow-docs/docs/_posts/2017-02-08-podcast.md
@@ -1,8 +1,7 @@
 ---
-layout: category
 title: Title Podcast
 icon: /img/icon-podcast.svg
-event: Lamda World
+event: Lambda World
 version: version 0.3.11
 date: 2017-03-11
 header-image: /img/blog-image-header.png
