--- a/modules/docs/arrow-docs/docs/_posts/2018-11-30-hangman.md
+++ b/modules/docs/arrow-docs/docs/_posts/2018-11-30-hangman.md
@@ -6,4 +6,4 @@ header-image: /img/blog-image-header.png
 category: news
 link: https://lordraydenmk.github.io/2018/functional-hangman-in-kotlin-with-arrow/
 ---
-[Functional Hangman](https://lordraydenmk.github.io/2018/functional-hangman-in-kotlin-with-arrow/) game - console application written with Arrow. Uses the `IO<A>` monad to push side effects to the edge of the system.
+[Functional Hangman](https://lordraydenmk.github.io/2018/functional-hangman-in-kotlin-with-arrow/) game - console application written with Arrow. Uses the `IO<Throwable, A>` monad to push side effects to the edge of the system.
