Taggin posts and search bar modification

--- a/arrow-site/blog/_posts/2017-11-02-fp-kotlin.md
+++ b/arrow-site/blog/_posts/2017-11-02-fp-kotlin.md
@@ -4,7 +4,7 @@ icon: /img/icon-podcast.svg
 header-image: https://cdn-images-1.medium.com/max/600/1*NpQ5mqoY4SH5iwsWG35RqQ.jpeg
 version: version 0.3.11
 category: tutorials
-tags: core
+tags: [core, fx, mtl]
 link: https://medium.com/@JorgeCastilloPr/kotlin-functional-programming-does-it-make-sense-36ad07e6bacf
 ---
 An ongoing blog series introducing Functional Programming architectures from scratch
