--- a/arrow-site/blog/_posts/2018-06-22-hk-types.md
+++ b/arrow-site/blog/_posts/2018-06-22-hk-types.md
@@ -4,7 +4,7 @@ icon: /img/icon-talk.svg
 header-image: https://img.youtube.com/vi/ERM0mBPNLHc/maxresdefault.jpg
 version: version 0.7.3
 category: videos
-tags: fx
+tags: [core]
 link: https://www.youtube.com/watch?v=ERM0mBPNLHc
 event: Yow! Lambda Jam, Sydney, Australia
 ---
