--- a/arrow-site/blog/_posts/2018-11-24-ank.md
+++ b/arrow-site/blog/_posts/2018-11-24-ank.md
@@ -4,7 +4,7 @@ icon: /img/icon-video.svg
 header-image: https://img.youtube.com/vi/kr8iWE4Jfhc/maxresdefault.jpg
 version: version 0.8.1
 category: videos
-tags: incubator
+tags: [core, incubator]
 link: https://www.youtube.com/watch?v=kr8iWE4Jfhc
 event: droidconSF, San Francisco
 ---
