--- a/arrow-site/blog/_posts/2018-06-24-arrow-101.md
+++ b/arrow-site/blog/_posts/2018-06-24-arrow-101.md
@@ -4,7 +4,7 @@ icon: /img/icon-podcast.svg
 header-image: https://cdn-images-1.medium.com/max/2000/1*7HJJpOQE8M1-xXW0_5eePQ.png
 version: version 0.7.3
 category: articles
-tags: core
+tags: [core]
 link: https://medium.com/@lehen01/arrow-101-building-an-android-app-using-functional-programming-fe959675d96d
 ---
 [Leandro Ferreira](https://twitter.com/mLeandroBF) presents how to build a simple app using Arrow and how to implement solutions with Semigroups.
